<resources>
    <string name="app_name">MovieApp</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="overview">Overview:</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="revenue">Revenue:</string>
    <string name="movie_poster">Movie Poster</string>
</resources>